force-app/main/default/objects/Premises__c/Premises__c.object-meta.xml
<CustomObject>
    <description>These are homes and business that can be associated with one or more accounts (person accounts)</description>
    <label>Premise</label>
    <nameField>
        <displayFormat>Premise-{0}</displayFormat>
        <label>Premise Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Premises</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>