force-app/main/default/objects/Premises__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Business Account</value>
        </filterItems>
        <infoMessage>Filter required for desired results.  DO NOT REMOVE</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Premises</relationshipLabel>
    <relationshipName>Premises1</relationshipName>
    <type>Lookup</type>
</CustomField>