force-app/main/default/objects/Premises__c/fields/Account_Number_and_Nickname__c.field-meta.xml
<CustomField>
    <fullName>Account_Number_and_Nickname__c</fullName>
    <formula>IF(ISBLANK(Account_Number__c), &quot;&quot;, Account_Number__c &amp; &quot;: &quot; &amp; Premise_Nickname__c)</formula>
    <label>Account Number and Nickname</label>
    <type>Text</type>
</CustomField>