force-app/main/default/objects/Premises__c/fields/Acquisition__c.field-meta.xml
<CustomField>
    <fullName>Acquisition__c</fullName>
    <description>is this premise related to an acquisition?</description>
    <inlineHelpText>is this premise related to an acquisition?</inlineHelpText>
    <label>Acquisition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Asgard</fullName>
            </value>
            <value>
                <fullName>Encore</fullName>
            </value>
            <value>
                <fullName>Energon</fullName>
            </value>
            <value>
                <fullName>Nordic</fullName>
            </value>
            <value>
                <fullName>NWS</fullName>
            </value>
            <value>
                <fullName>OKESI</fullName>
            </value>
            <value>
                <fullName>POET</fullName>
            </value>
            <value>
                <fullName>ETC</fullName>
            </value>
            <value>
                <fullName>Continuum</fullName>
            </value>
            <value>
                <fullName>AEM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>