force-app/main/default/objects/Premises__c/fields/Activate_Pending_Consultant__c.field-meta.xml
<CustomField>
    <fullName>Activate_Pending_Consultant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>check this to set the Consultant Change Pending to the active Consultant</description>
    <inlineHelpText>check this to set the Consultant Change Pending to the active Consultant</inlineHelpText>
    <label>Activate Pending Consultant</label>
    <type>Checkbox</type>
</CustomField>