force-app/main/default/objects/Premises__c/fields/AMS_Meter_Flag__c.field-meta.xml
<CustomField>
    <fullName>AMS_Meter_Flag__c</fullName>
    <description>The flag to identify whether an ESIID has an Advanced meter installed at the premise, (Advanced Meter = ‘Y’, Not an Advanced Meter = ‘N’).</description>
    <inlineHelpText>Is an Advanced Meter installed at the premise? (Advanced Meter = ‘Y’, Not an Advanced Meter = ‘N’).</inlineHelpText>
    <label>AMS Meter?</label>
    <length>1</length>
    <type>Text</type>
</CustomField>