force-app/main/default/objects/Premises__c/fields/Annual_Historical_Margin__c.field-meta.xml
<CustomField>
    <fullName>Annual_Historical_Margin__c</fullName>
    <description>what was the margin for the past 12 months?</description>
    <inlineHelpText>what was the margin for the past 12 months?</inlineHelpText>
    <label>Annual Historical Margin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>