force-app/main/default/objects/Premises__c/fields/Annual_Projected_Future_Margin__c.field-meta.xml
<CustomField>
    <fullName>Annual_Projected_Future_Margin__c</fullName>
    <description>what is the projected margin for the next 12 months?</description>
    <inlineHelpText>what is the projected margin for the next 12 months?</inlineHelpText>
    <label>Annual Projected Margin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>