force-app/main/default/objects/Premises__c/fields/Annual_Usage__c.field-meta.xml
<CustomField>
    <fullName>Annual_Usage__c</fullName>
    <description>what was the usage for the last 12 months?</description>
    <inlineHelpText>what was the usage for the last 12 months?</inlineHelpText>
    <label>Annual Usage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>