force-app/main/default/objects/Premises__c/fields/Annual_Usage_Normalized__c.field-meta.xml
<CustomField>
    <fullName>Annual_Usage_Normalized__c</fullName>
    <description>Annual usage, normalized for weather</description>
    <inlineHelpText>Annual usage, normalized for weather</inlineHelpText>
    <label>Annual Usage (Normalized)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>