force-app/main/default/objects/Premises__c/fields/Annual_Use_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Annual_Use_Rollup__c</fullName>
    <label>Annual Use Rollup</label>
    <summarizedField>Annual_Usage__c.Premise_Usage_Sum__c</summarizedField>
    <summaryFilterItems>
        <field>Annual_Usage__c.Year__c</field>
        <operation>equals</operation>
        <value>2011,2012,2013</value>
    </summaryFilterItems>
    <summaryForeignKey>Annual_Usage__c.Premise__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>