force-app/main/default/objects/Premises__c/fields/APin__c.field-meta.xml
<CustomField>
    <fullName>APin__c</fullName>
    <description>Used for Gas Choice in NE</description>
    <inlineHelpText>Used for Gas Choice in NE</inlineHelpText>
    <label>APin</label>
    <length>10</length>
    <type>Text</type>
</CustomField>