force-app/main/default/objects/Premises__c/fields/Arkansas_Lease_Field__c.field-meta.xml
<CustomField>
    <fullName>Arkansas_Lease_Field__c</fullName>
    <label>Arkansas Lease Field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>