force-app/main/default/objects/Premises__c/fields/Arkansas_Operator__c.field-meta.xml
<CustomField>
    <fullName>Arkansas_Operator__c</fullName>
    <label>Arkansas Operator</label>
    <length>100</length>
    <type>Text</type>
</CustomField>