force-app/main/default/objects/Premises__c/fields/Arkansas_Operator_Address__c.field-meta.xml
<CustomField>
    <fullName>Arkansas_Operator_Address__c</fullName>
    <label>Arkansas Operator Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>