force-app/main/default/objects/Premises__c/fields/Arkansas_Operator_City__c.field-meta.xml
<CustomField>
    <fullName>Arkansas_Operator_City__c</fullName>
    <label>Arkansas Operator City</label>
    <length>20</length>
    <type>Text</type>
</CustomField>