force-app/main/default/objects/Premises__c/fields/Arkansas_Operator_State__c.field-meta.xml
<CustomField>
    <fullName>Arkansas_Operator_State__c</fullName>
    <label>Arkansas Operator State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>