force-app/main/default/objects/Premises__c/fields/Arkansas_Operator_Zip__c.field-meta.xml
<CustomField>
    <fullName>Arkansas_Operator_Zip__c</fullName>
    <label>Arkansas Operator Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>