force-app/main/default/objects/Premises__c/fields/Arkansas_Well_Permit_Number__c.field-meta.xml
<CustomField>
    <fullName>Arkansas_Well_Permit_Number__c</fullName>
    <label>Arkansas Well Permit Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>