force-app/main/default/objects/Premises__c/fields/Arkansas_Well_Reporting_Type__c.field-meta.xml
<CustomField>
    <fullName>Arkansas_Well_Reporting_Type__c</fullName>
    <label>Arkansas Well Reporting Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Conventional (Col D)</fullName>
            </value>
            <value>
                <fullName>High Cost (Col E)</fullName>
            </value>
            <value>
                <fullName>High Cost (Col H)</fullName>
            </value>
            <value>
                <fullName>Marginal Conventional (Col C)</fullName>
            </value>
            <value>
                <fullName>Marginal High Cost (Col G)</fullName>
            </value>
            <value>
                <fullName>New Discovery (Col B)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>