force-app/main/default/objects/Premises__c/fields/Assignment_From_Premise__c.field-meta.xml
<CustomField>
    <fullName>Assignment_From_Premise__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assignment From Premise</label>
    <referenceTo>Premises__c</referenceTo>
    <relationshipLabel>Premises</relationshipLabel>
    <relationshipName>Premises</relationshipName>
    <type>Lookup</type>
</CustomField>