force-app/main/default/objects/Premises__c/fields/Average_Total_Charges__c.field-meta.xml
<CustomField>
    <fullName>Average_Total_Charges__c</fullName>
    <label>Average Total Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>