force-app/main/default/objects/Premises__c/fields/Balloted__c.field-meta.xml
<CustomField>
    <fullName>Balloted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For gas choice program, this customer has already made a selection for the current year and may not be marketed to</description>
    <inlineHelpText>For gas choice program, this customer has already made a selection for the current year and may not be marketed to</inlineHelpText>
    <label>Balloted</label>
    <type>Checkbox</type>
</CustomField>