force-app/main/default/objects/Premises__c/fields/Bill_Group__c.field-meta.xml
<CustomField>
    <fullName>Bill_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill Group</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Bill_Group__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Bill_Group__c</referenceTo>
    <relationshipLabel>Premises</relationshipLabel>
    <relationshipName>Premises</relationshipName>
    <type>Lookup</type>
</CustomField>