force-app/main/default/objects/Premises__c/fields/Bill_Group_Batch__c.field-meta.xml
<CustomField>
    <fullName>Bill_Group_Batch__c</fullName>
    <formula>IF(ISBLANK(Bill_Group__r.Bill_Group_Batch__r.Name), &quot;&quot;, Bill_Group__r.Bill_Group_Batch__r.Name)</formula>
    <label>Bill Group Batch</label>
    <type>Text</type>
</CustomField>