force-app/main/default/objects/Premises__c/fields/Billing_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Group_Name__c</fullName>
    <formula>IF(ISBLANK(Bill_Group__r.Billing_Group_Name__c), &quot;&quot;, Bill_Group__r.Billing_Group_Name__c)</formula>
    <label>Billing Group Name</label>
    <type>Text</type>
</CustomField>