force-app/main/default/objects/Premises__c/fields/Call_Status__c.field-meta.xml
<CustomField>
    <fullName>Call_Status__c</fullName>
    <description>Can agents call this Gas Choice customer?</description>
    <formula>IF( 
OR(Balloted__c = TRUE, SG_Do_Not_Call__c = TRUE)
, IMAGE(&quot;/resource/Do_Not_Call&quot;,&quot;red&quot;),IMAGE(&quot;/resource/Call_Us&quot;,&quot;green&quot;))</formula>
    <inlineHelpText>Can agents call this Gas Choice customer?</inlineHelpText>
    <label>Call Status</label>
    <type>Text</type>
</CustomField>