force-app/main/default/objects/Premises__c/fields/Callback_Permission__c.field-meta.xml
<CustomField>
    <fullName>Callback_Permission__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The customer has said it&#39;s ok to call them back (ignoring the utility call limit)</description>
    <inlineHelpText>The customer has said it&#39;s ok to call them back (ignoring the utility call limit)</inlineHelpText>
    <label>Callback Permission</label>
    <type>Checkbox</type>
</CustomField>