force-app/main/default/objects/Premises__c/fields/Capacity_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Estimate__c</fullName>
    <label>Capacity Estimate</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>