force-app/main/default/objects/Premises__c/fields/CES_Office_Code__c.field-meta.xml
<CustomField>
    <fullName>CES_Office_Code__c</fullName>
    <formula>CES_Office__r.Customer_Number__c</formula>
    <label>CES Office Code</label>
    <type>Text</type>
</CustomField>