force-app/main/default/objects/Premises__c/fields/Change_to_Existing_Property__c.field-meta.xml
<CustomField>
    <fullName>Change_to_Existing_Property__c</fullName>
    <defaultValue>false</defaultValue>
    <description>property changes apply to existing properties and are not new records.  Used for property changes only.</description>
    <inlineHelpText>property changes apply to existing properties and are not new records.  Used for property changes only.</inlineHelpText>
    <label>Change to Existing Property</label>
    <type>Checkbox</type>
</CustomField>