force-app/main/default/objects/Premises__c/fields/Choice_Eligibility_Year__c.field-meta.xml
<CustomField>
    <fullName>Choice_Eligibility_Year__c</fullName>
    <description>The most recent year that this customer appeared on the Source Gas Choice Eligible premise file</description>
    <inlineHelpText>The most recent year that this customer appeared on the Source Gas Choice Eligible premise file</inlineHelpText>
    <label>Choice Eligibility Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>