force-app/main/default/objects/Premises__c/fields/CNG_Sales__c.field-meta.xml
<CustomField>
    <fullName>CNG_Sales__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this premise is classified as CES CNG Sales</description>
    <inlineHelpText>this premise is classified as CES CNG Sales</inlineHelpText>
    <label>CNG Sales</label>
    <type>Checkbox</type>
</CustomField>