force-app/main/default/objects/Premises__c/fields/Company_Role__c.field-meta.xml
<CustomField>
    <fullName>Company_Role__c</fullName>
    <description>what role does our company play for this well?</description>
    <inlineHelpText>what role does our company play for this well?</inlineHelpText>
    <label>Company Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Purchaser</fullName>
            </value>
            <value>
                <fullName>Operator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>