force-app/main/default/objects/Premises__c/fields/Consultant_Activation_Needed__c.field-meta.xml
<CustomField>
    <fullName>Consultant_Activation_Needed__c</fullName>
    <description>formula for consultant change reporting</description>
    <formula>AND(
  Consultant__c &lt;&gt; Consultant_Change_Pending__c,
  NOT(ISBLANK(Consultant_Change_Pending__c))
)</formula>
    <label>Consultant Activation Needed</label>
    <type>Checkbox</type>
</CustomField>