force-app/main/default/objects/Premises__c/fields/Consultant_Change_Pending__c.field-meta.xml
<CustomField>
    <fullName>Consultant_Change_Pending__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>this displays a consultant change that has been made but not yet activated</description>
    <inlineHelpText>this displays a consultant change that has been made but not yet activated</inlineHelpText>
    <label>Consultant Change Pending</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Premises (Consultant Change Pending)</relationshipLabel>
    <relationshipName>Premises4</relationshipName>
    <type>Lookup</type>
</CustomField>