force-app/main/default/objects/Premises__c/fields/Consultant_Changed__c.field-meta.xml
<CustomField>
    <fullName>Consultant_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consultant Changed</label>
    <type>Checkbox</type>
</CustomField>