force-app/main/default/objects/Premises__c/fields/Consultant_Formula__c.field-meta.xml
<CustomField>
    <fullName>Consultant_Formula__c</fullName>
    <formula>Consultant__r.Name</formula>
    <label>Consultant Formula</label>
    <type>Text</type>
</CustomField>