force-app/main/default/objects/Premises__c/fields/Consultant_Margin__c.field-meta.xml
<CustomField>
    <fullName>Consultant_Margin__c</fullName>
    <defaultValue>0</defaultValue>
    <description>How much the consultant gets paid, per Dth</description>
    <inlineHelpText>How much the consultant gets paid, per Dth</inlineHelpText>
    <label>Consultant Margin</label>
    <precision>10</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>