force-app/main/default/objects/Premises__c/fields/Contract_Request__c.field-meta.xml
<CustomField>
    <fullName>Contract_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Request</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>Contract_Request__c.Account__c</valueField>
        </filterItems>
        <infoMessage>Filter required for desired results.  DO NOT REMOVE</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contract_Request__c</referenceTo>
    <relationshipLabel>Premises</relationshipLabel>
    <relationshipName>Premises</relationshipName>
    <type>Lookup</type>
</CustomField>