force-app/main/default/objects/Premises__c/fields/Copied_from_Premise__c.field-meta.xml
<CustomField>
    <fullName>Copied_from_Premise__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>System field, populated from Copy Premise Action</description>
    <inlineHelpText>System field, populated from Copy Premise Action</inlineHelpText>
    <label>Copied from Premise</label>
    <referenceTo>Premises__c</referenceTo>
    <relationshipLabel>Premises (Copied from Premise)</relationshipLabel>
    <relationshipName>Premises3</relationshipName>
    <type>Lookup</type>
</CustomField>