force-app/main/default/objects/Premises__c/fields/CountyPS__c.field-meta.xml
<CustomField>
    <fullName>CountyPS__c</fullName>
    <formula>IF( FIND(&#39;-&#39;, Unit_Lease_Number__c ) = 0
, NULL
, MID( Unit_Lease_Number__c , LEN(MID( Unit_Lease_Number__c , 0, FIND(&#39;-&#39;, Unit_Lease_Number__c )+1)) , 3) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CountyPS</label>
    <type>Text</type>
</CustomField>