force-app/main/default/objects/Premises__c/fields/Current_Plan_Expiration_not_TrueCost__c.field-meta.xml
<CustomField>
    <fullName>Current_Plan_Expiration_not_TrueCost__c</fullName>
    <description>The expiration date of this premise/customer&#39;s current non-TrueCost-enrolled plan.</description>
    <inlineHelpText>The expiration date of this premise/customer&#39;s current non-TrueCost-enrolled plan.</inlineHelpText>
    <label>Current Plan Expiration (not TrueCost)</label>
    <type>Date</type>
</CustomField>