force-app/main/default/objects/Premises__c/fields/Current_Premise_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Premise_Status__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Premise Status</label>
    <referenceTo>Premise_Status__c</referenceTo>
    <relationshipLabel>Premises</relationshipLabel>
    <relationshipName>Premises</relationshipName>
    <type>Lookup</type>
</CustomField>