force-app/main/default/objects/Premises__c/fields/Curtailment_Contact_1__c.field-meta.xml
<CustomField>
    <fullName>Curtailment_Contact_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Curtailment Contact #1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Premises (Curtailment Contact #1)</relationshipLabel>
    <relationshipName>Premises2</relationshipName>
    <type>Lookup</type>
</CustomField>