force-app/main/default/objects/Premises__c/fields/Curtailment_Contact_2__c.field-meta.xml
<CustomField>
    <fullName>Curtailment_Contact_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Curtailment Contact #2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Premises (Curtailment Contact #2)</relationshipLabel>
    <relationshipName>Premises3</relationshipName>
    <type>Lookup</type>
</CustomField>