force-app/main/default/objects/Premises__c/fields/Curtailment_Contact_3__c.field-meta.xml
<CustomField>
    <fullName>Curtailment_Contact_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Curtailment Contact #3</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Premises (Curtailment Contact #3)</relationshipLabel>
    <relationshipName>Premises4</relationshipName>
    <type>Lookup</type>
</CustomField>