force-app/main/default/objects/Premises__c/fields/CustNum__c.field-meta.xml
<CustomField>
    <fullName>CustNum__c</fullName>
    <formula>IF(ISBLANK(Bill_Group__r.Customer_Number__c), &quot;&quot;, Bill_Group__r.Customer_Number__c)</formula>
    <inlineHelpText>Customer Number on Bill Group</inlineHelpText>
    <label>CustNum</label>
    <type>Text</type>
</CustomField>