force-app/main/default/objects/Premises__c/fields/Customer_Storage_Strategy_Group__c.field-meta.xml
<CustomField>
    <fullName>Customer_Storage_Strategy_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Storage Strategy Group</label>
    <referenceTo>Customer_Storage_Strategy_Group__c</referenceTo>
    <relationshipLabel>Premises</relationshipLabel>
    <relationshipName>Premises</relationshipName>
    <type>Lookup</type>
</CustomField>