force-app/main/default/objects/Premises__c/fields/Default_Delivery_Obligation__c.field-meta.xml
<CustomField>
    <fullName>Default_Delivery_Obligation__c</fullName>
    <label>Default Delivery Obligation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Firm</fullName>
            </value>
            <value>
                <fullName>Secondary Firm</fullName>
            </value>
            <value>
                <fullName>Interruptible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>