force-app/main/default/objects/Premises__c/fields/Default_Delivery_Point__c.field-meta.xml
<CustomField>
    <fullName>Default_Delivery_Point__c</fullName>
    <label>Default Delivery Point</label>
    <length>255</length>
    <type>Text</type>
</CustomField>