force-app/main/default/objects/Premises__c/fields/Desired_LDC_Rate_Class__c.field-meta.xml
<CustomField>
    <fullName>Desired_LDC_Rate_Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Desired LDC Rate Class</label>
    <referenceTo>LDC_Rate_Class__c</referenceTo>
    <relationshipLabel>Premises (Desired LDC Rate Class)</relationshipLabel>
    <relationshipName>Premises1</relationshipName>
    <type>Lookup</type>
</CustomField>