force-app/main/default/objects/Premises__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <description>The five divisions in the NE/WY Choice program.</description>
    <inlineHelpText>The five divisions in the NE/WY Choice program.</inlineHelpText>
    <label>Division</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Program__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>Western</fullName>
            </value>
            <value>
                <fullName>Casper</fullName>
            </value>
            <value>
                <fullName>Gillette</fullName>
            </value>
            <value>
                <fullName>Torrington</fullName>
            </value>
            <value>
                <fullName>Conroe</fullName>
            </value>
            <value>
                <fullName>Woodlands 1</fullName>
            </value>
            <value>
                <fullName>Woodlands 2</fullName>
            </value>
            <value>
                <fullName>Beaumont</fullName>
            </value>
            <value>
                <fullName>South Texas</fullName>
            </value>
            <value>
                <fullName>Houston</fullName>
            </value>
            <value>
                <fullName>Texas Coast</fullName>
            </value>
            <value>
                <fullName>ETC</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>GSPL - TX</fullName>
            </value>
            <value>
                <fullName>Enbridge</fullName>
            </value>
            <value>
                <fullName>Kinder - Tejas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>