force-app/main/default/objects/Premises__c/fields/Do_Not_Sync_Last_Update__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Sync_Last_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>set to true to not send last update to external systems.  This is flipped when update is due to external system update.</description>
    <inlineHelpText>set to true to not send last update to external systems.  This is flipped when update is due to external system update.</inlineHelpText>
    <label>Do Not Sync Last Update</label>
    <type>Checkbox</type>
</CustomField>