force-app/main/default/objects/Premises__c/fields/DUNS__c.field-meta.xml
<CustomField>
    <fullName>DUNS__c</fullName>
    <description>The Duns number assigned to the Market Participant.</description>
    <inlineHelpText>The Duns number assigned to the Market Participant.</inlineHelpText>
    <label>DUNS Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>