force-app/main/default/objects/Premises__c/fields/Dynamic_Status__c.field-meta.xml
<CustomField>
    <fullName>Dynamic_Status__c</fullName>
    <label>Upcoming Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>