force-app/main/default/objects/Premises__c/fields/Effective_Date_on_FL__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date_on_FL__c</fullName>
    <label>Effective Date on Facility List</label>
    <type>Date</type>
</CustomField>