force-app/main/default/objects/Premises__c/fields/Electric_Service_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Electric_Service_Address_2__c</fullName>
    <description>Service Address Overflow</description>
    <inlineHelpText>Service Address Overflow</inlineHelpText>
    <label>Address Line 2</label>
    <length>120</length>
    <type>Text</type>
</CustomField>