force-app/main/default/objects/Premises__c/fields/Electric_Service_Address__c.field-meta.xml
<CustomField>
    <fullName>Electric_Service_Address__c</fullName>
    <description>The address that corresponds with the ERCOT lookup table</description>
    <inlineHelpText>The address that corresponds with the ERCOT lookup table.  Includes Street name and address number, not State or Zip Code.</inlineHelpText>
    <label>Address</label>
    <length>120</length>
    <type>Text</type>
</CustomField>