force-app/main/default/objects/Premises__c/fields/Electric_Service_Address_City__c.field-meta.xml
<CustomField>
    <fullName>Electric_Service_Address_City__c</fullName>
    <label>City</label>
    <length>30</length>
    <type>Text</type>
</CustomField>